Make tagged images visible for screen readers (bug 1708040)
The idea is to insert a span in the text layer with an aria-role set to img
and use the bounding box provided by the attribute field in the tag dict in
order to have non-null dimensions for the image to make it "visible".

--- a/web/annotation_editor_layer_builder.css
+++ b/web/annotation_editor_layer_builder.css
@@ -71,6 +71,10 @@
 
   &:not(.free) span {
     cursor: var(--editorHighlight-editing-cursor);
+
+    &[role="img"] {
+      cursor: var(--editorFreeHighlight-editing-cursor);
+    }
   }
 
   &.free span {
